# llmtestbench

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  deploy.sh  gen-entity.sh  postman_collection.json  testllm.service
.github/workflows/: deploy.yaml  test.yaml
entity/: Cargo.toml
entity/src/: lib.rs  model.rs  prelude.rs  session.rs
entity/src/auth/: audit_log_entries.rs  flow_state.rs  identities.rs  instances.rs  mfa_amr_claims.rs  mfa_challenges.rs  mfa_factors.rs  mod.rs  one_time_tokens.rs  prelude.rs  refresh_tokens.rs  saml_providers.rs  saml_relay_states.rs  schema_migrations.rs  sea_orm_active_enums.rs  sessions.rs  sso_domains.rs  sso_providers.rs  users.rs
entity/src/public/: api_key.rs  mod.rs  plan.rs  prelude.rs  session.rs
examples/: input.csv
examples/deno/: ai.test.ts
examples/nodejs-jest/: ai.test.js  package-lock.json  package.json
migration/src/: lib.rs  m20250211_101302_init.rs  util.rs
sea_orm/: Cargo.toml
sea_orm/src/: lib.rs
src/: api.rs  error.rs  main.rs  swagger.rs  util.rs
src/api/: analyze.rs  auth.rs  external.rs  model.rs  post_analyze.rs
template/: auth.liquid  swagger.liquid
