[package]
name = "testllm"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[workspace]
members = [".", "entity", "migration", "sea_orm"]

[workspace.dependencies]
entity = { path = "entity" }
sea_orm = { path = "sea_orm" }
serde = { version = "1.0.217", features = ["derive"] }

[workspace.dependencies.sea-orm-migration]
version = "1.1.0"
# https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime
features = [
  "runtime-tokio-rustls",

  "sqlx-postgres",
  "sqlx-sqlite",
  
  "with-uuid",
  "with-chrono",
  "with-json",
]

[dependencies]
actix-multipart = "0.7.2"
actix-web = { version = "4.9.0", features = ["openssl"] }
actix-web-grants = "4.1.2"
csv = "1.3.1"
dotenvy = "0.15.7"
openai-api-rs = "5.2.6"
serde_json = "1.0.138"
tracing-subscriber = "0.3.19"
tracing-actix-web = "0.7.15"
thiserror = "2.0.11"
tracing = "0.1.41"
tokio-task-pool = "0.1.5"
rand = "0.9.0"
resend-rs = "0.11.2"
openssl = "0.10.71"

entity.workspace = true
sea_orm.workspace = true
serde.workspace = true

migration = { path = "migration" }
aws-config = "1.5.16"
aws-sdk-s3 = "1.74.0"
liquid = "0.26.11"
supabase-auth = { git = "https://github.com/MrAdhit/supabase-auth-rs", rev = "8150d464ba33f2c32998f1b6e4581df6663e085a" }
